Fix checkbox radius on ios

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -262,6 +262,7 @@ figure {
 	height: var(--checkbox-width);
 	background: var(--button-highlight);
 	box-shadow: var(--border-field);
+	border-radius: 0;
 	&:checked::before {
 		content: "";
 		display: block;
